[package]

name = "arg_input"
version = "2.0.1"
authors = [ "William Yao <williamyaoh@gmail.com>" ]

description = "ARGF-style input handling for Rust"
repository = "https://gitlab.com/williamyaoh/arg_input"
readme = "README.md"
license = "BSD-3-Clause"
keywords = [ "cli", "text" ]
categories = [ "command-line-interface", "text-processing" ]

[dependencies]
